<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".matchactivity.MatchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_appbar_match"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/pager_match"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_match"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:menu="@menu/menu_top_app_bar"
            app:title="@string/match_title" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout_match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed">

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager_match"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/toggleGroup_defense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_appbar_match" />

    <TextView
        android:id="@+id/text_chrono_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chrono_label"
        app:layout_constraintBottom_toBottomOf="@+id/chronometer_defense"
        app:layout_constraintEnd_toStartOf="@+id/chronometer_defense"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/chronometer_defense" />

    <Chronometer
        android:id="@+id/chronometer_defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?textAppearanceHeadline5"
        app:layout_constraintBottom_toBottomOf="@+id/toggleGroup_defense"
        app:layout_constraintEnd_toStartOf="@+id/toggleGroup_defense"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_chrono_label"
        app:layout_constraintTop_toTopOf="@+id/toggleGroup_defense" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleGroup_defense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/chronometer_defense"
        app:layout_constraintTop_toBottomOf="@+id/pager_match"
        app:selectionRequired="false">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/toggle_defense"
            style="@style/Widget.Storm.LargerButton.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scoring" />
    </com.google.android.material.button.MaterialButtonToggleGroup>
</androidx.constraintlayout.widget.ConstraintLayout>