<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-teleop"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".matchactivity.fragments.TeleopFragment">

    <com.sidparikh.materialuserapp.matchactivity.FreezableConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="16dp"
        android:id="@+id/layout_teleop_freezable"
        android:translationY="-20sp">


        <TextView
            android:id="@+id/text_teleop_inner_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/inner_header"
            android:textAppearance="?textAppearanceHeadline6"
            app1:layout_constraintBottom_toTopOf="@+id/counter_teleop_inner"
            app1:layout_constraintEnd_toEndOf="parent"
            app1:layout_constraintStart_toStartOf="parent"
            app1:layout_constraintTop_toTopOf="parent"
            app1:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintBottom_toTopOf="@+id/counter_teleop_inner"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.sidparikh.materialuserapp.matchactivity.CounterView
            android:id="@+id/counter_teleop_inner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app1:layout_constraintBottom_toTopOf="@+id/text_teleop_outer_header"
            app1:layout_constraintEnd_toEndOf="parent"
            app1:layout_constraintStart_toStartOf="parent"
            app1:layout_constraintTop_toBottomOf="@+id/text_teleop_inner_header"
            app:layout_constraintBottom_toTopOf="@id/text_teleop_outer_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_teleop_inner_header" />

        <TextView
            android:id="@+id/text_teleop_outer_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/outer_header"
            android:textAppearance="?textAppearanceHeadline6"
            app1:layout_constraintBottom_toTopOf="@+id/counter_teleop_outer"
            app1:layout_constraintEnd_toEndOf="parent"
            app1:layout_constraintStart_toStartOf="parent"
            app1:layout_constraintTop_toBottomOf="@+id/counter_teleop_inner"
            app:layout_constraintBottom_toTopOf="@+id/counter_teleop_outer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/counter_teleop_inner"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.sidparikh.materialuserapp.matchactivity.CounterView
            android:id="@+id/counter_teleop_outer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app1:layout_constraintBottom_toTopOf="@+id/text_teleop_lower_header"
            app1:layout_constraintEnd_toEndOf="parent"
            app1:layout_constraintStart_toStartOf="parent"
            app1:layout_constraintTop_toBottomOf="@+id/text_teleop_outer_header"
            app:layout_constraintBottom_toTopOf="@id/text_teleop_lower_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_teleop_outer_header" />

        <TextView
            android:id="@+id/text_teleop_lower_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/lower_header"
            android:textAppearance="?textAppearanceHeadline6"
            app1:layout_constraintBottom_toTopOf="@+id/counter_teleop_lower"
            app1:layout_constraintEnd_toEndOf="parent"
            app1:layout_constraintStart_toStartOf="parent"
            app1:layout_constraintTop_toBottomOf="@+id/counter_teleop_outer"
            app:layout_constraintBottom_toTopOf="@+id/counter_teleop_lower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/counter_teleop_outer"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.sidparikh.materialuserapp.matchactivity.CounterView
            android:id="@+id/counter_teleop_lower"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app1:layout_constraintBottom_toTopOf="@+id/check_position"
            app1:layout_constraintEnd_toEndOf="parent"
            app1:layout_constraintStart_toStartOf="parent"
            app1:layout_constraintTop_toBottomOf="@+id/text_teleop_lower_header"
            app:layout_constraintBottom_toTopOf="@id/check_rotation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_teleop_lower_header" />

        <CheckBox
            android:id="@+id/check_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/position_control"
            app1:layout_constraintEnd_toStartOf="@+id/check_rotation"
            app1:layout_constraintHorizontal_chainStyle="packed"
            app1:layout_constraintStart_toStartOf="@+id/counter_teleop_lower"
            app1:layout_constraintTop_toBottomOf="@+id/counter_teleop_lower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_rotation" />

        <CheckBox
            android:id="@+id/check_rotation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/rotation_control"
            app1:layout_constraintEnd_toEndOf="@+id/counter_teleop_lower"
            app1:layout_constraintStart_toEndOf="@+id/check_position"
            app1:layout_constraintTop_toTopOf="@+id/check_position"
            app:layout_constraintBottom_toTopOf="@id/check_position"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/counter_teleop_lower" />

    </com.sidparikh.materialuserapp.matchactivity.FreezableConstraintLayout>
</ScrollView>